<resources>
    <string name="app_name">ElectricCarApp</string>
    <string name="electric_car">Electric Car</string>
    <string name="cars">Cars</string>
    <string name="price">Price</string>
    <string name="value">$ 300000.00</string>
    <string name="favorites">Favorites</string>
    <string name="battery">Battery</string>
    <string name="battery_value">300 kWh</string>
    <string name="power">Power</string>
    <string name="power_value">500 hp</string>
    <string name="recharge">Recharge</string>
    <string name="recharge_value">30 min</string>
    <string name="kwh_price">kWh Price</string>
    <string name="traveled_km">Traveled Km</string>
    <string name="calculate">Calculate</string>
    <string name="result">result</string>
    <string name="calculate_autonomy">Calculate Autonomy</string>
    <string name="car_imageview">car imageView</string>
    <string name="float_button">float_button</string>
    <string name="iv_empty_state">Sorry, connection unavailable!</string>
    <string name="response_error">"Unable to load data"</string>
</resources>