<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_return_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return_arrow" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calculate_autonomy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_return_arrow" />

    <EditText
        android:id="@+id/et_kwh_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="@string/kwh_price"
        android:hint="@string/kwh_price"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <EditText
        android:id="@+id/et_traveled_km"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/traveled_km"
        android:autofillHints="@string/traveled_km"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/et_kwh_price"
        app:layout_constraintStart_toStartOf="@id/et_kwh_price"
        app:layout_constraintTop_toBottomOf="@id/et_kwh_price" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@id/et_traveled_km"
        app:layout_constraintStart_toStartOf="@id/et_traveled_km"
        app:layout_constraintTop_toBottomOf="@id/et_traveled_km" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/result"
        android:maxLength="10"
        style="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="@id/btn_calculate"
        app:layout_constraintStart_toStartOf="@id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate" />



</androidx.constraintlayout.widget.ConstraintLayout>